--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8082
+server.port=8080
 
 ##MySQL
-spring.datasource.url=jdbc:mysql:
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/deryeogage
+spring.datasource.username=root
+spring.datasource.password=ssafy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.devtools.livereload.enabled=true
