modify: s3 properties 수정

--- a/Back/src/main/resources/application-s3.properties
+++ b/Back/src/main/resources/application-s3.properties
@@ -1,5 +1,5 @@
 # AWS S3
-cloud.aws.s3.bucket=drggFileRefactoring
+cloud.aws.s3.bucket=drggrefactoring
 cloud.aws.credentials.access-key=AKIA4PV5FJLU2RO74Y64
 cloud.aws.credentials.secret-key=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
 cloud.aws.region.static=ap-northeast-2
