feat: Redis 초기 설정

--- a/Back/build.gradle
+++ b/Back/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
 	// AWS S3 파일 저장소 관련 의존성
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	//redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 //jacoco 테스트
