--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -29,3 +29,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 # JWT
 security.jwt.token.SK= b307willbethewinnerofthefirstproject
 security.jwt.token.tokenValidTime= 86400000
+
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
