--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
 ##MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/deryeogage
-spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.url=jdbc:mysql://deryegage.store:3306/deryeogage
+spring.datasource.username= ${MYSQL_USERNAME}
+spring.datasource.password= ${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.devtools.livereload.enabled=true
@@ -27,9 +27,9 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 
 # JWT
-security.jwt.token.SK= b307willbethewinnerofthefirstproject
+security.jwt.token.SK= ${JWT_SECRET_KEY}
 security.jwt.token.tokenValidTime= 86400000
 
 # redis
-spring.redis.host= localhost
-spring.redis.port= 6379
+spring.redis.host= deryegage.store
+spring.redis.port= 9707
