update: application-s3.properties ec2 서버환경으로 설정

--- a/Back/src/main/resources/application-s3.properties
+++ b/Back/src/main/resources/application-s3.properties
@@ -1,7 +1,7 @@
 # AWS S3
-cloud.aws.s3.bucket=drggrefactoring
-cloud.aws.credentials.access-key=AKIA4PV5FJLU2RO74Y64
-cloud.aws.credentials.secret-key=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
+cloud.aws.s3.bucket=${AWS_S3_BUCKET_NAME}
+cloud.aws.credentials.access-key=${AWS_S3_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${AWS_S3_SECRET_KEY}
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
