--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 ##MySQL
-spring.datasource.url=jdbc:mysql://deryegage.store:2231/deryeogage?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://172.17.0.2:2231/deryeogage?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username= ${MYSQL_USERNAME}
 spring.datasource.password= ${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
