--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ##MySQL
-spring.datasource.url=jdbc:mysql://deryegage.store:2231/deryeogage?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://deryegage.store:2231/deryeogage?serverTimezone=UTC&characterEncoding=UTF-8&sslMode=DISABLED
 spring.datasource.username=dngy
 spring.datasource.password=drgg-refactoring-dngy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
