--- a/Back/src/main/resources/application.properties
+++ b/Back/src/main/resources/application.properties
@@ -31,4 +31,4 @@ security.jwt.token.tokenValidTime= 86400000
 # redis
 spring.redis.host=deryegage.store
 spring.redis.port=9707
-
+spring.redis.password=${REDIS_PASSWORD}
