--- a/Back/.gitignore
+++ b/Back/.gitignore
@@ -39,3 +39,7 @@ out/
 ### mac m1 ###
 .DS_Store
 assets/.DS_Store
+
+### properties
+!**/src/main/resources/application.properties
+!**/src/main/resources/application-s3.properties
