--- a/Back/.gitignore
+++ b/Back/.gitignore
@@ -41,5 +41,5 @@ out/
 assets/.DS_Store
 
 ### properties
-!**/src/main/resources/application.properties
-!**/src/main/resources/application-s3.properties
+src/main/resources/application.properties
+src/main/resources/application-s3.properties
